# HomeAutomation

./: CMakeLists.txt  CMakeUserPresets.json  build.sh  commands.txt  conanfile.py
include/: Device.h
include/storage/: DataStore.h  Database.h  IDataStore.h
source/include/core/model/devices/: Device.h
source/include/core/storage/: DataStore.h  DatabaseStore.h
source/include/core/storage/database/: IDatabase.h
source/include/dependencies/database/: Database.h
source/src/: CMakeLists.txt  main.cpp
source/src/core/: CMakeLists.txt
source/src/core/model/: Device.cpp
source/src/core/storage/: CMakeLists.txt  DataStore.tpp  DatabaseStore.tpp
source/src/core/storage/database/: CMakeLists.txt
source/src/dependencies/: CMakeLists.txt
source/src/dependencies/database/: CMakeLists.txt  Database.cpp
src/: Device.cpp  main.cpp
src/storage/: Database.cpp
